--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/png" href="/src/favicon16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/src/favicon32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/src/favicon96.png" sizes="96x96" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ALA Species Search</title>
 
