Fixed 'first 100' CSV saving logic, slightly changed background colour & removed unecessary CSV exporting state

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           'Helvetica Neue', sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
+        background-color: #f7f7f7;
       }
 
       code {
